# roomrs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-en.md  README.md  roomrs-개발계획서.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/roomrs/: Cargo.toml  README.md
crates/roomrs-async/: Cargo.toml  README.md
crates/roomrs-async/src/: lib.rs
crates/roomrs-cli/: Cargo.toml  README.md
crates/roomrs-cli/src/: main.rs
crates/roomrs-cli/tests/: cli.rs
crates/roomrs-core/: Cargo.toml  README.md  build.rs
crates/roomrs-core/src/: database.rs  entity.rs  error.rs  handle.rs  lib.rs  live.rs  migration.rs  multi_instance.rs  pool.rs  query.rs  relation.rs  row.rs
crates/roomrs-macros/: Cargo.toml  README.md
crates/roomrs-macros/src/: dao.rs  database.rs  entity.rs  lib.rs  relation.rs  schema.rs  util.rs
crates/roomrs-migrate/: Cargo.toml  README.md
crates/roomrs-migrate/src/: lib.rs
crates/roomrs/examples/: bench.rs  live_query.rs  migrations.rs  multi_process.rs  pagination.rs  query_builder.rs  relations.rs  todo_async.rs  todo_sync.rs  transactions.rs
crates/roomrs/src/: lib.rs
crates/roomrs/tests/: backend_system.rs  entity_default_table.rs  invalidation_filter_m4.rs  live_m4.rs  logging_log_crate.rs  migrations_m3.rs  multi_instance_m4b.rs  query_hooks_m6.rs  relations_m5.rs  review_r2.rs  review_v3_connection_pool.rs  review_v3_dao_json.rs  review_v3_entity.rs  schema_embed.rs  schema_snapshot.rs  snapshot_reexports.rs  todo_async.rs  todo_sync.rs  transactions_m2.rs  ui.rs
crates/roomrs/tests/migrations_sql/: 1_2_add_note.sql  2_3_add_done.sql
crates/roomrs/tests/ui/fail/: dao_delete_without_returning.rs  dao_delete_without_returning.stderr  dao_insert_bad_sig.rs  dao_insert_bad_sig.stderr  dao_insert_ignore_rowid.rs  dao_insert_ignore_rowid.stderr  dao_missing_receiver.rs  dao_missing_receiver.stderr  dao_missing_sql_attr.rs  dao_missing_sql_attr.stderr  dao_non_result_return.rs  dao_non_result_return.stderr  dao_query_select_u64.rs  dao_query_select_u64.stderr  dao_result_live_query.rs  dao_result_live_query.stderr  dao_result_unit.rs  dao_result_unit.stderr  dao_self_in_macro.rs  dao_self_in_macro.stderr  dao_two_sql_attrs.rs  dao_two_sql_attrs.stderr  dao_unsupported_parameter.rs  dao_unsupported_parameter.stderr  dao_update_without_returning.rs  dao_update_without_returning.stderr  database_duplicate_entity.rs  database_duplicate_entity.stderr  database_no_entities.rs  database_no_entities.stderr  database_version_zero.rs  database_version_zero.stderr  entity_default_nan.rs  entity_default_nan.stderr  entity_duplicate_column.rs  entity_duplicate_column.stderr  entity_duplicate_pk.rs  entity_duplicate_pk.stderr  entity_quoted_identifier.rs  entity_quoted_identifier.stderr  (+16 more)
crates/roomrs/tests/ui/pass/: attr_names.rs  dao_write_returning.rs  insert_default_values.rs  live_union_cte_deps.rs  schema_embed.rs  schema_embed_destructive.rs  schema_ok.rs  schema_stale_runtime.rs
docs/: cross-build.md
docs/task/: agent-common.md  implementation-plan.md
docs/task/done/: 001-invalidation-filter-spec.md  003-filtered-watch-api-tests.md  004-remove-multi-instance.md  005-crates-readme-metadata.md  006-crates-readme-display.md  007-backend-linkage-features.md  008-windows-system-backends.md  009-backend-ci-docs.md
docs/task/new/: 002-preupdate-tracker.md  008-windows-system-backends.md  009-backend-ci-docs.md
examples/mobile-ffi/: Cargo.toml  README.md
examples/mobile-ffi/src/: lib.rs
vcpkg/ports/sqlcipher/: CMakeLists.txt  README.md  portfile.cmake  sqlcipher-config.in.cmake  vcpkg.json
xtask/: Cargo.toml
xtask/src/: main.rs
