# roomrs-core — Database · 자체 풀 · 에러 · SqlType · Tracker · 노티파이어 · 마이그레이션 런너
[package]
name = "roomrs-core"
description = "Core runtime for roomrs (internal crate)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
roomrs-migrate = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
rusqlite = { version = "0.38", features = ["hooks"] }
serde_json = { version = "1", optional = true }
time = { version = "0.3", optional = true }
uuid = { version = "1", optional = true }
# visitor: 서브쿼리 포함 의존 테이블 추출(H-2)에 AST 방문자 사용
sqlparser = { version = "0.52", optional = true, features = ["visitor"] }
futures-core = { version = "0.3", optional = true }

[features]
default = []
# SQLite/SQLCipher 링크 backend (명세 §0 15) — canonical feature는 상호 배타
sqlite-bundled = ["rusqlite/bundled"]
sqlite-system = []
sqlcipher-bundled = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
sqlcipher-system = ["rusqlite/sqlcipher"]
# 기존 공개 feature 하위 호환 alias
bundled = ["sqlite-bundled"]
cipher = ["sqlcipher-bundled"]
# 라이브 쿼리/무효화 (명세 §9) — 런타임 SQL 테이블 추출에 sqlparser 사용
live = ["dep:sqlparser", "rusqlite/preupdate_hook"]
# LiveQuery::into_stream (명세 §5.6) — 파사드 async feature가 켠다
stream = ["dep:futures-core"]
# 타입 컨버터 — rusqlite ToSql/FromSql 위임 (명세 §11)
time = ["rusqlite/time", "dep:time"]
uuid = ["rusqlite/uuid", "dep:uuid"]
json = ["dep:serde_json"]
